ai-descriptor-derive/tests/ui/compile_fail/item_features_unnamed_fields.stderr
error: ItemWithFeatures can only be derived for structs with named fields
 --> tests/ui/compile_fail/item_features_unnamed_fields.rs:9:8
  |
9 | struct Potion(PotionEffect, Duration); // Unnamed fields
  |        ^^^^^^
